--- a/Ecommerce.WebAssembly/Shared/NavMenu.razor
+++ b/Ecommerce.WebAssembly/Shared/NavMenu.razor
@@ -23,6 +23,7 @@
                     <li class="nav-item" b-test><NavLink class="nav-link" href="dashboard"> Dashboard</NavLink></li>
                     <li class="nav-item"><NavLink class="nav-link" href="usuarios"> Usuarios</NavLink></li>
                     <li class="nav-item"><NavLink class="nav-link" href="categorias"> Categorias</NavLink></li>
+                    <li class="nav-item"><NavLink class="nav-link" href="filtros"> Filtros</NavLink></li>
                     <li class="nav-item"><NavLink class="nav-link" href="productos"> Productos</NavLink></li>
                 </AuthorizeView>
 
